# kindle_highlights

./: README.md  app.py  pyproject.toml
templates/: index.html  login.html
