[tool.poetry]
name = "Kindle Highlights"
version = "0.1.0"
description = "Export Kindle highlights from your kindle"
authors = ["Jesper Reiche <jesper@jesperreiche.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
